--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "artstation",
+  "version": "1.0.0",
   "scripts": {
-    "test": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "telegraf": "^4.12.2",
+    "firebase": "^9.13.0",
+    "node-fetch": "^3.3.0",
     "winston": "^3.8.2"
   }
 }
